fix(engines): support null diff field values